public/stylesheets/styles.css
body {
	background-image: url(http://i.imgur.com/xof4rIn.jpg);
	background-repeat: no-repeat;
	background-size: 100%;
	color: white;
  background-attachment:fixed;

}

div form {
  display: inline-block;
}

.right {
  position: block;
}


.header {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  margin: 0;
  font-size: 150px;
  color: white;
 

}

.title {
  display: block;
  width: 500px;
}

.wide {
  display: block;
  width: 500px;
  height: 200px;
}

.large {
  display: block;

}

input[type="text"]
{
    font-family: impact;
    font-size: 40px;
    color: black;
}

input[type="password"]
{
    font-family: impact;
    font-size: 40px;
    color: black;
}


input {
  font-size: 32px;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  border: 2px solid black; 
  background-color: white;
  -webkit-box-shadow: 
    inset 0 0 8px  rgba(0,1,0,0.1),
          0 0 16px rgba(0,1,0,0.1); 
  -moz-box-shadow: 
    inset 0 0 8px  rgba(0,0,0,0.1),
          0 0 16px rgba(0,0,0,0.1); 
  box-shadow: 
    inset 0 0 8px  rgba(0,1,0,0.1),
          0 0 16px rgba(0,1,0,0.1); 
  padding: 15px;
  margin: 0 0 10px 0;
}

.button {
  text-decoration: none;
  font-family: calibri; 
  display: inline-block; 
  background-color: rgba(255, 0, 0, 0);
  float: right;
  margin: 0 auto;
        
}


h1 {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
	font-size: 80px;
  color: white;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
  

              
}

h2 {
  font-family: 'Roboto', sans-serif;
  font-size: 70px;
  color: white;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: black;

}

h3 {
  font-family: 'Roboto', sans-serif;
  font-size: 50px;
  color: white;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
}

h4 {
  font-size: 15px;
  color: black;
  -webkit-text-stroke-width: 0px;
  -webkit-text-stroke-color: none;
}


a {
  color: white;
  font-family: 'Roboto', sans-serif;
  -webkit-text-stroke-width: 0.5px;
  -webkit-text-stroke-color: black;
  text-decoration: none;
}

ul {
  list-style-type: none;
  color: white;

}

li {
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  color: black;
  -webkit-text-stroke-width: 0px;
  -webkit-text-stroke-color: white;
 
}

.nav {
  font-family: impact;
  font-size: 12px;
}

.title-av {
  position: inline-block;
}

.entry {
  margin-top: 0px;
  margin: 10px;
  padding: 20px;
  background: rgba(255, 255, 255, 0.3);
  border: 2px solid black;
  border-radius: 5px;

}

.container {
	width: 700px;
  margin: auto;
  padding: 0px;
  clear: both;
  display: block;
  color: white;
}

.center {
  position: center;
}


.miniuser{
  display: inline-block;
  color: navy;
  width: 10em;
  height: 10em;
  border: 2px solid black;
  overflow: hidden;
  font-family: calibri;
  font-weight: bold;
}

.miniuser img {
  color: white;
  float: right;
  width: 7em;
}

.avatar {
  color: white;
  float: right;
  width: 100px;
  height: 100px;
  border-radius: 150px;
  border: 1px solid black;
}



span {
  color: #E64643;
}

